Урок 1. Изменили функцию получения данный с сервера, добавили дату в запрос. ДОбавили на экран chip, для получения актуальных, вчерашних и позавчерашних данных. (слушаем пока каждый чип).

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,8 @@
     <dimen name="fab_cradle_margin">5dp</dimen>
     <dimen name="title_image_description_text_size">24sp</dimen>
     <dimen name="image_description_text_size">18sp</dimen>
+    <dimen name="padding_start">10dp</dimen>
+    <dimen name="padding_end">10dp</dimen>
+    <dimen name="layout_width_zero">0dp</dimen>
+    <dimen name="margin_top">16dp</dimen>
 </resources>
