Урок 2. Вынесли в ресурсы весь "хардкод". Изменили условие проверки нажатия чипа HD на противоположное.

--- a/app/src/main/res/layout/fragment_picture_of_the_day.xml
+++ b/app/src/main/res/layout/fragment_picture_of_the_day.xml
@@ -12,8 +12,8 @@
             android:id="@+id/main"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingStart="@dimen/padding_start"
-            android:paddingEnd="@dimen/padding_end">
+            android:paddingStart="@dimen/fragment_POD_padding_start"
+            android:paddingEnd="@dimen/fragment_POD_padding_end">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/input_layout"
@@ -89,7 +89,7 @@
                     style="@style/Widget.MaterialComponents.Chip.Choice"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="32dp"
+                    android:layout_marginStart="@dimen/fragment_POD_chip_HD_margin_start"
                     android:text="@string/hd" />
 
             </LinearLayout>
@@ -110,7 +110,7 @@
                 android:id="@+id/image_date"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_top"
+                android:layout_marginTop="@dimen/fragment_POD_margin_top"
                 android:textSize="@dimen/image_date_text_size"
                 android:gravity="end"
                 app:layout_constraintBottom_toTopOf="@id/image_title_description"
@@ -122,7 +122,7 @@
                 android:id="@+id/image_title_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_top"
+                android:layout_marginTop="@dimen/fragment_POD_margin_top"
                 android:textSize="@dimen/title_image_description_text_size"
                 app:layout_constraintBottom_toTopOf="@id/image_description"
                 app:layout_constraintEnd_toEndOf="parent"
