--- a/app/src/main/res/layout/bottom_navigation_layout.xml
+++ b/app/src/main/res/layout/bottom_navigation_layout.xml
@@ -9,9 +9,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="@dimen/bottom_nav_margin_start"
+        android:layout_marginTop="@dimen/bottom_nav_margin_top"
+        android:layout_marginEnd="@dimen/bottom_nav_margin_end"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
