--- a/app/src/main/res/layout/bottom_sheet_layout.xml
+++ b/app/src/main/res/layout/bottom_sheet_layout.xml
@@ -6,20 +6,20 @@
     android:id="@+id/bottom_sheet_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f6f6fa"
+    android:background="@color/bottom_sheet_container_background_color"
 
     app:behavior_hideable="true"
-    app:behavior_peekHeight="120dp"
+    app:behavior_peekHeight="@dimen/behavior_peek_height"
 
     android:visibility="visible"
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
     <View
         android:id="@+id/bottomSheetLine"
-        android:layout_width="25dp"
-        android:layout_height="1dp"
-        android:layout_marginTop="5dp"
-        android:background="#663b4351"
+        android:layout_width="@dimen/bottom_sheet_view_layout_width"
+        android:layout_height="@dimen/bottom_sheet_view_layout_height"
+        android:layout_marginTop="@dimen/bottom_sheet_view_margin_top"
+        android:background="@color/bottom_sheet_view_background_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -28,10 +28,10 @@
         android:id="@+id/bottomSheetDescriptionHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        android:textColor="#000"
+        android:layout_marginTop="@dimen/bottom_sheet_header_margin_top"
+        android:paddingStart="@dimen/bottom_sheet_header_padding_start"
+        android:paddingEnd="@dimen/bottom_sheet_header_padding_end"
+        android:textColor="@color/bottom_sheet_header_text_color"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,8 +42,8 @@
         android:id="@+id/bottomSheetDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
+        android:paddingStart="@dimen/bottom_sheet_text_body_padding_"
+        android:paddingEnd="@dimen/bottom_sheet_text_body_padding_end"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/bottomSheetDescriptionHeader"
