--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,7 @@
     <color name="colorPrimary">#FF6200EE</color>
     <color name="colorAccent">#FF03DAC5</color>
     <color name="color_gray">#66000000</color>
+    <color name="bottom_sheet_container_background_color">#f6f6fa</color>
+    <color name="bottom_sheet_view_background_color">#663b4351</color>
+    <color name="bottom_sheet_header_text_color">#000</color>
 </resources>
