Урок 2. Создали две темы MoonTheme и MarsTheme. Создали фрагмент с настройками для выбора темы приложения (метод реализации надо возможно доработать). Фрагмент с чипами перенесли в другое меню.

--- a/app/src/main/res/layout/fragment_picture_of_the_day.xml
+++ b/app/src/main/res/layout/fragment_picture_of_the_day.xml
@@ -143,7 +143,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        app:backgroundTint="@color/colorPrimary"
+        app:backgroundTint="?attr/colorPrimary"
         app:fabAlignmentMode="center"
 
         app:fabCradleRoundedCornerRadius="@dimen/fab_radius"
@@ -157,7 +157,7 @@
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/colorAccent"
+        app:backgroundTint="?attr/colorAccent"
         android:contentDescription="@string/any_message"
         app:layout_anchor="@id/bottom_app_bar"
         app:srcCompat="@drawable/ic_plus_fab"
