--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,17 +7,35 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="green">#FF03DAC5</color>
+    <color name="light_gray">#a7c0cd</color>
+    <color name="color_gray">#66000000</color>
 
     <color name="colorPrimary">#FF6200EE</color>
     <color name="colorAccent">#FF03DAC5</color>
-    <color name="color_gray">#66000000</color>
+
     <color name="bottom_sheet_container_background_color">#f6f6fa</color>
     <color name="bottom_sheet_view_background_color">#663b4351</color>
     <color name="bottom_sheet_header_text_color">#000</color>
 
-    <color name="light_gray">#a7c0cd</color>
     <color name="indigo">#6002ee</color>
     <color name="indigo_dark">#0000ba</color>
     <color name="indigo_light">#9c47ff</color>
-    <color name="green">#FF03DAC5</color>
+
+    <color name="moon_primary">#bdbdbd</color>
+    <color name="moon_primary_dark">#8d8d8d</color>
+    <color name="moon_primary_light">#bdbdbd</color>
+    <color name="moon_secondary">#b0bec5</color>
+    <color name="moon_secondary_dark">#808e95</color>
+    <color name="moon_secondary_light">#e2f1f8</color>
+    <color name="moon_background_color">#607d8b</color>
+
+    <color name="mars_primary">#d84315</color>
+    <color name="mars_primary_dark">#9f0000</color>
+    <color name="mars_primary_light">#ff7543</color>
+    <color name="mars_secondary">#ffd180</color>
+    <color name="mars_secondary_dark">#caa052</color>
+    <color name="mars_secondary_light">#ffffb1</color>
+    <color name="mars_background_color">#dd2c00</color>
+
 </resources>
