--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,6 +12,38 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" >?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="textColorConnected">@color/green</item>
+        <item name="textColorDisConnected">@color/light_gray</item>
+
+
+    </style>
+
+    <style name="MoonTheme" parent="Theme.MaterialYouFromEalipatov">
+        <item name="colorPrimary">@color/moon_primary</item>
+        <item name="colorPrimaryVariant">@color/moon_primary_dark</item>
+        <item name="colorOnPrimary">@color/moon_primary_light</item>
+
+        <item name="colorSecondary">@color/moon_secondary</item>
+        <item name="colorSecondaryVariant">@color/moon_secondary_dark</item>
+        <item name="colorOnSecondary">@color/moon_secondary_light</item>
+
+        <item name="backgroundColor">@color/moon_background_color</item>
+
+        <item name="textAppearanceDisplaySmall">@android:color/black</item>
+    </style>
+
+    <style name="MarsTheme" parent="Theme.MaterialYouFromEalipatov">
+        <item name="colorPrimary">@color/mars_primary</item>
+        <item name="colorPrimaryVariant">@color/mars_primary_dark</item>
+        <item name="colorOnPrimary">@color/mars_primary_light</item>
+
+        <item name="colorSecondary">@color/mars_secondary</item>
+        <item name="colorSecondaryVariant">@color/mars_secondary_dark</item>
+        <item name="colorOnSecondary">@color/mars_secondary_light</item>
+
+        <item name="backgroundColor">@color/mars_background_color</item>
+
+        <item name="textAppearanceDisplaySmall">@android:color/black</item>
     </style>
 
     <style name="IndigoTheme" parent="Theme.MaterialYouFromEalipatov">
@@ -20,7 +52,17 @@
         <item name="colorSecondary">@color/light_gray</item>
         <item name="colorSecondaryVariant">@color/light_gray</item>
         <item name="colorOnSecondary">@color/black</item>
-        <item name="textColorConnected">@color/green</item>
-        <item name="textColorDisConnected">@color/light_gray</item>
+        <item name="themeColorPrimary">@color/indigo</item>
+        <item name="colorAccent">@color/indigo_dark</item>
+
+        <item name="textAppearanceButton">@style/AppTextAppearance.Button</item>
+
+        <item name="shapeAppearanceSmallComponent">@style/AppShapeAppearance.SmallComponent</item>
+        <item name="shapeAppearanceMediumComponent">@style/AppShapeAppearance.MediumComponent</item>
+
+        <item name="materialButtonStyle">@style/AppButton</item>
+        <item name="textInputStyle">@style/AppTextField</item>
+        <item name="materialCardViewStyle">@style/AppCard</item>
     </style>
+
 </resources>
