Урок 2. Удалили лишний код, переименовали некоторые функции.
Сделали выбор дневно/ночной схемы. Сохранили через второй файл sharedPreferences (если использую один файл - вылетает приложение, надо разобраться).

Подкорректирован код открытия фрагментов.

Разобраться как после пересоздания активити не выходить из приложения из фрагмента настроек.

--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -1,42 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
     android:orientation="vertical">
 
     <TextView
         style="@style/title_text_style"
-        android:text="@string/settings"
-        android:textColor="@android:color/black"/>
+        android:text="@string/settings" />
 
-        <com.google.android.material.chip.ChipGroup
-            android:id="@+id/chip_theme_group"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+    <com.google.android.material.chip.ChipGroup
+        android:id="@+id/chip_theme_group"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
         <com.google.android.material.chip.Chip
             android:id="@+id/moon_theme"
             style="@style/Widget.MaterialComponents.Chip.Choice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/moon_theme"
-            />
+            android:text="@string/moon_theme" />
 
         <com.google.android.material.chip.Chip
             android:id="@+id/mars_theme"
             style="@style/Widget.MaterialComponents.Chip.Choice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/mars_theme"
-            />
-        </com.google.android.material.chip.ChipGroup>
+            android:text="@string/mars_theme" />
+
+    </com.google.android.material.chip.ChipGroup>
 
     <TextView
         android:id="@+id/selected_theme_name"
-        style="@style/title_text_style"
-        android:text="Выбрана:"
-        android:textColor="@android:color/black"/>
+        style="@style/title_text_style" />
+
+    <com.google.android.material.switchmaterial.SwitchMaterial
+        android:id="@+id/switchNightMod"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/night_mode" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/apply_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="@string/apply" />
+
 
 </LinearLayout>
